// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should match the snapshot with 15% containerHeight if the currentPage is Camera 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "#e9e9e9",
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "height": "15%",
      },
    ]
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="user"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="map-marker"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="camera"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="image"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="sign-in"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`Footer should match the snapshot with the correct data passed in 1`] = `
<Component
  style={
    Array [
      Object {
        "backgroundColor": "#e9e9e9",
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "height": "8%",
      },
    ]
  }
>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="user"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="map-marker"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="camera"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="image"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Themed.Icon
        color="#3c4859"
        name="sign-in"
        size={30}
        type="font-awesome"
      />
    </TouchableOpacity>
  </Component>
</Component>
`;
